--- a/package.json
+++ b/package.json
@@ -7,12 +7,10 @@
         "url": "https://github.com/FriendlyIllusion/illusion.js.git"
     },
     "scripts": {
-        "build": "gulp",
-        "test": "gulp"
+        "build": "gulp"
     },
     "devDependencies": {
         "gulp": "~3.8",
-        "gulp-qunit": "~1.0",
         "gulp-util": "~3.0",
         "gulp-concat": "~2.4",
         "gulp-uglify": "~1.0",
