Renaming the rep to prefetch.js

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-    "name": "illusion.js",
-    "version": "0.2",
+    "name": "prefetch.js",
+    "version": "0.1",
     "authors": [
         "Jason Vaillancourt"
     ]
